start the login screen design

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_login_headline"
+            android:gravity="center"
+            android:textColor="#CADEED"
+            android:textStyle="bold"
+            android:textSize="40sp" />
+
+        <LinearLayout
+            android:layout_width="297dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingVertical="50dp">
+
+            <TextView
+                android:id="@+id/tvUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:text="@string/tv_username"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/etUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#d8d6d6"
+                android:ems="10"
+                android:hint="@string/et_username"
+                android:inputType="text"
+                android:minHeight="48dp"
+                android:autofillHints="username"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="297dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingVertical="50dp">
+
+            <TextView
+                android:id="@+id/tvPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:text="@string/tv_password"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#d8d6d6"
+                android:ems="10"
+                android:hint="@string/et_password"
+                android:inputType="textPassword"
+                android:minHeight="48dp"
+                android:autofillHints="password"/>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_button_background"
+            android:gravity="center"
+            android:text="@string/btn_login"
+            android:textColor="#00000" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
