make the segoe font

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,18 +26,20 @@
             android:gravity="center"
             android:textColor="#CADEED"
             android:textStyle="bold"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:fontFamily="@font/Segoe_UI_Bold"/>
 
         <LinearLayout
             android:layout_width="297dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingVertical="50dp">
+            android:paddingVertical="30dp">
 
             <TextView
                 android:id="@+id/tvUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/Segoe_UI_Bold"
                 android:paddingBottom="5dp"
                 android:text="@string/tv_username"
                 android:textColor="@color/black"
@@ -55,14 +57,15 @@
                 android:autofillHints="username"
                 android:background="@drawable/edittext_background"
                 android:drawableStart="@drawable/username_icon_drawable"
-                android:drawablePadding="8dp" />
+                android:drawablePadding="8dp"
+                android:fontFamily="@font/Segoe_UI"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="297dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingVertical="50dp">
+            android:paddingVertical="30dp">
 
             <TextView
                 android:id="@+id/tvPassword"
@@ -72,7 +75,8 @@
                 android:text="@string/tv_password"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/Segoe_UI_Bold"/>
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -89,7 +93,8 @@
                     android:autofillHints="password"
                     android:background="@drawable/edittext_background"
                     android:drawableStart="@drawable/password_icon_drawable"
-                    android:drawablePadding="8dp" />
+                    android:drawablePadding="8dp"
+                    android:fontFamily="@font/Segoe_UI"/>
 
                 <ImageButton
                     android:id="@+id/btnShowPassword"
@@ -98,7 +103,6 @@
                     android:layout_gravity="end|center_vertical"
                     android:background="@android:color/transparent"
                     android:src="@drawable/show_password_icon_drawable" />
-
             </FrameLayout>
 
         </LinearLayout>
@@ -111,7 +115,9 @@
             android:background="@drawable/rounded_button_background"
             android:gravity="center"
             android:text="@string/btn_login"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/Segoe_UI"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
