--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -153,5 +153,6 @@
         android:background="@color/light_blue"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
-        android:contentDescription="@string/cd_add_new_contact"/>
+        android:contentDescription="@string/cd_add_new_contact"
+        app:tint="@android:color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
