--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -110,8 +110,9 @@
             android:id="@+id/contactImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/add_new_contact_icon"
-            app:civ_border_color="#FF000000" />
+            android:src="@drawable/picture1"
+            app:civ_border_color="#FF000000"
+            android:layout_marginStart="5dp"/>
 
         <TextView
             android:id="@+id/tvLastMessage"
