fix chat screen design

--- a/app/src/main/res/drawable/contact_text_bubble_drawable.xml
+++ b/app/src/main/res/drawable/contact_text_bubble_drawable.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white" /> <!-- Set the background color of the bubble -->
-    <corners android:radius="16dp" /> <!-- Set the corner radius of the bubble -->
+    <corners
+        android:topLeftRadius="25dp"
+        android:topRightRadius="25dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="25dp" />
 </shape>
