--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -202,6 +202,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/test"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
