--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/test"
             android:layout_width="260dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
