--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,6 +49,7 @@
                 android:layout_marginTop="30dp" />
 
             <LinearLayout
+                android:id="@+id/ll_username"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -66,7 +67,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etUsername"
+                    android:id="@+id/et_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints="username"
@@ -80,6 +81,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_password"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -101,7 +103,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/etPassword"
+                        android:id="@+id/et_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints="password"
@@ -125,6 +127,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_passwordVerification"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -146,7 +149,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/etPasswordVerification"
+                        android:id="@+id/et_passwordVerification"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints="password"
@@ -171,6 +174,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_displayName"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -188,7 +192,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etDisplayName"
+                    android:id="@+id/et_displayName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints="username"
@@ -202,7 +206,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/test"
+                android:id="@+id/ll_profilePic"
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -210,7 +214,7 @@
                 android:layout_gravity="center">
 
                 <TextView
-                    android:id="@+id/tvPicture"
+                    android:id="@+id/tvProfilePic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="5dp"
@@ -220,7 +224,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/etPicture"
+                    android:id="@+id/et_profilePic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autofillHints="username"
