fix colors and icons

--- a/app/src/main/res/drawable/bottom_circle.xml
+++ b/app/src/main/res/drawable/bottom_circle.xml
@@ -2,5 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#e74cf8" />
+    <solid android:color="@color/circle_purple" />
 </shape>
