--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactsActivity">
+    tools:context=".ContactsActivity"
+    android:background="@color/background_gray">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -35,7 +36,7 @@
             android:layout_gravity="center"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
-            android:background="#00FFFFFF"
+            android:background="@color/blue_shade_2"
             app:srcCompat="@drawable/ic_settings" />
 
         <ImageButton
@@ -46,7 +47,7 @@
             android:layout_marginStart="15dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
-            android:background="#00FFFFFF"
+            android:background="@color/blue_shade_2"
             app:srcCompat="@drawable/ic_search" />
 
         <ImageButton
@@ -58,7 +59,7 @@
             android:layout_marginEnd="10dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
-            android:background="#00FFFFFF"
+            android:background="@color/blue_shade_2"
             app:srcCompat="@drawable/ic_logout" />
     </LinearLayout>
 
@@ -110,8 +111,9 @@
             android:id="@+id/contactImg"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/add_new_contact_icon"
-            app:civ_border_color="#FF000000" />
+            android:src="@drawable/picture1"
+            app:civ_border_color="@color/black"
+            android:layout_marginStart="5dp"/>
 
         <TextView
             android:id="@+id/tvLastMessage"
@@ -133,7 +135,7 @@
                 android:id="@+id/tvNotification"
                 android:text="2"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
+                android:textColor="@color/white"
                 android:layout_gravity="center"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
@@ -150,7 +152,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_contact"
-        android:background="@color/light_blue"
+        android:background="@color/blue_shade_2"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
         android:contentDescription="@string/cd_add_new_contact"
