--- a/app/src/main/res/drawable/contacts_bar.xml
+++ b/app/src/main/res/drawable/contacts_bar.xml
@@ -2,5 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/light_blue" />
+    <solid android:color="@color/blue_shade_2" />
 </shape>
