--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D8D6D6" />
+    <solid android:color="@color/edit_text_gray" />
     <corners android:radius="10dp" />
 </shape>
