--- a/app/src/main/res/drawable/invalid_edit_text.xml
+++ b/app/src/main/res/drawable/invalid_edit_text.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D8D6D6" />
+    <solid android:color="@color/edit_text_gray" />
     <corners android:radius="10dp" />
     <stroke
         android:width="2dp"
-        android:color="#FF0000" />
+        android:color="@color/red" />
 </shape>
