--- a/app/src/main/res/drawable/notification_circle.xml
+++ b/app/src/main/res/drawable/notification_circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#91aec4" />
+    <solid android:color="@color/blue_shade_4" />
     <corners android:radius="1000dp" />
 </shape>
