--- a/app/src/main/res/drawable/top_circle.xml
+++ b/app/src/main/res/drawable/top_circle.xml
@@ -2,5 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#55f2ab" />
+    <solid android:color="@color/circle_green" />
 </shape>
