--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_blue">#CADEED</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_shade_1">#DBECF4</color>
+    <color name="blue_shade_2">#CADEED</color>
+    <color name="blue_shade_3">#B7D0E1</color>
+    <color name="blue_shade_4">#91AEC4</color>
+    <color name="blue_shade_5">#5F84A2</color>
+    <color name="blue_shade_6">#194569</color>
+    <color name="circle_purple">#E74CF8</color>
+    <color name="circle_green">#55F2AB</color>
+    <color name="edit_text_gray">#D8D6D6</color>
+    <color name="red">#FF0000</color>
+    <color name="background_gray">#E6E5E5</color>
 </resources>
